# mk8_tournament

./: .gitignore  LICENSE  README.md  init.up.sql
backend/: .env  Cargo.toml  doc.yaml  mktour.db
backend/migrations/2024-01-11-175736_create/: down.sql  up.sql
backend/src/: auth.rs  handler.rs  main.rs  tests.rs
backend/src/db/: mod.rs  model.rs  schema.rs
backend/src/db/model/: faceoff.rs  mod.rs  phase.rs  player.rs  race.rs  race_point.rs  team.rs
backend/src/services/: Testing.md  faceoffs.rs  mod.rs  phases.rs  players.rs  races.rs  teams.rs  testing.sh  user.rs  user_test.rs
backend/src/utils/: ids.rs
frontend/: .env  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: AppBar.tsx  Bracket.tsx
