[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"
actix-web = "3.0.0-alpha.1"
actix-cors = "0.5.4"
diesel = { version = "1.4.4", features = [
    "sqlite",
    "uuidv07",
    "r2d2",
    "chrono",
] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
